--- a/Source/Server/apps/mpconsole/templates/dashboard/dashboard.html
+++ b/Source/Server/apps/mpconsole/templates/dashboard/dashboard.html
@@ -60,7 +60,7 @@
 								</div>
 								<div class="tab-pane" id="pReleased">
 									<br>
-									<table id="table" class="table table-condensed" data-toggle="table">
+									<table id="table" class="table table-condensed table-striped" data-toggle="table">
 										<thead>
 											<tr>
 												<th>Patch</th>
