--- a/Source/Server/apps/mpconsole/templates/mdm/device_config_profiles.html
+++ b/Source/Server/apps/mpconsole/templates/mdm/device_config_profiles.html
@@ -15,7 +15,7 @@ MDM - Device Config Profiles
     {% for col in columns %}
 
     {% endfor %}
-	<table id="table" data-toolbar="#toolbar" data-show-export="true">
+	<table id="table" data-toolbar="#toolbar" data-show-export="true" class="table table-condensed table-striped">
 		<div id="toolbar">
             {% if session.role[0] == 1 %}
             <button id="syncButton" type="button" class="btn btn-default" title="Sync Content from InTune"><i class="glyphicon glyphicon-cloud-download"></i></button>
@@ -37,7 +37,6 @@ MDM - Device Config Profiles
 		$('#table').bootstrapTable(
 		{
             url: "/mdm/configProfiles/list",
-			striped: true,
 			pagination: true,
 			sidePagination: 'client',
 			pageList: ['10', '20', '50', '100', 'All'],
