--- a/Source/Server/apps/mpconsole/templates/software/software_pkg_wizard.html
+++ b/Source/Server/apps/mpconsole/templates/software/software_pkg_wizard.html
@@ -457,7 +457,7 @@
 	</form>
 </div>
 <div id="overlay">
-	<img id="overlayImg" src="{{ url_for('static', filename='img/35.gif')}}" style="display:block;margin:auto;padding-top:10%;" />
+	<img id="overlayImg" src="{{ url_for('static', filename='img/36.png')}}" style="display:block;margin:auto;padding-top:10%;" />
 	<h1 style="text-align: center; color: white; ">Saving...</h1>
 	<table width="500" align="center">
 		<tr>
