--- a/Source/Server/apps/mpconsole/templates/asus_servers.html
+++ b/Source/Server/apps/mpconsole/templates/asus_servers.html
@@ -10,7 +10,7 @@ MacPatch Servers
 {%  endblock %}
 
 {% block bodyPanel %}
-	<table id="table" data-toolbar="#toolbar" class="table table-condensed" data-show-export="true">
+	<table id="table" data-toolbar="#toolbar" class="table table-condensed table-striped" data-show-export="true">
 		<div id="toolbar">
 			<button id="addButton" type="button" class="btn btn-default"><i class="glyphicon glyphicon-plus"></i></button>
 			<button id="delButton" type="button" class="btn btn-default"><i class="glyphicon glyphicon-trash"></i></button>
@@ -27,8 +27,8 @@ MacPatch Servers
 	<script>
 	$( document ).ready(function()
 	{
-		$('#table').bootstrapTable({
-			striped: true,
+		$('#table').bootstrapTable(
+		{
 			ajax: function loadMyRows(params)
 			{
 				if (params.data.search == '') {
