--- a/Source/Server/apps/mpconsole/templates/dashboard/dashview.html
+++ b/Source/Server/apps/mpconsole/templates/dashboard/dashview.html
@@ -17,12 +17,12 @@
 
 {% block body %}
 	<div>
-		<table id="chartDataTable" data-toolbar="#chartDataToolbar" data-show-export="true" class="table table-condensed">
+		<table id="chartDataTable" data-toolbar="#chartDataToolbar" data-show-export="true" class="table table-condensed table-striped">
 			<div id="chartDataToolbar"></div>
 		</table>
 	</div>
 	<div id="overlay">
-		<img id="overlayImg" src="{{ url_for('static', filename='img/35.gif')}}" style="display:block;margin:auto;padding-top:10%;" />
+		<img id="overlayImg" src="{{ url_for('static', filename='img/36.png')}}" style="display:block;margin:auto;padding-top:10%;" />
 		<h1 style="text-align: center; color: white; ">Saving...</h1>
 	</div>
 {% endblock %}
@@ -50,7 +50,6 @@
 			search: true,
 			pageSize: 20,
 			pageList: [5, 10, 20, 50, 100, 200],
-			pagination: true,
 			pagination: true,
 			sidePagination: "client",
 			showRefresh: true,
