--- a/Source/Server/apps/mpconsole/templates/mp_servers.html
+++ b/Source/Server/apps/mpconsole/templates/mp_servers.html
@@ -10,7 +10,7 @@ MacPatch Servers
 {%  endblock %}
 
 {% block bodyPanel %}
-	<table id="table" data-toolbar="#toolbar" class="table table-condensed" data-show-export="true">
+	<table id="table" data-toolbar="#toolbar" class="table table-condensed table-striped" data-show-export="true">
 		<div id="toolbar">
 			<button id="addButton" type="button" class="btn btn-default"><i class="glyphicon glyphicon-plus"></i></button>
 			<button id="delButton" type="button" class="btn btn-default"><i class="glyphicon glyphicon-trash"></i></button>
@@ -27,14 +27,13 @@ MacPatch Servers
 	<script>
 	$( document ).ready(function()
 	{
-		$('#table').bootstrapTable({
-			striped: true,
+		$('#table').bootstrapTable(
+		{
 			ajax: function loadMyRows(params)
 			{
 				if (params.data.search == '') {
 					params.data.search = undefined;
 				}
-				// /profiles/group/<groupid>
 				var _url = "/console/servers/mp/list";
 				$.ajax({
 					type: 'GET',
@@ -91,26 +90,27 @@ MacPatch Servers
 	function operateFormatter(value, row, index)
 	{
 	    var htmlData = [];
-		htmlData.push('<table>');
-		htmlData.push('<tr>');
-
-        htmlData.push('<td><a class="edit" href="javascript:void(0)" title="Edit">');
+		htmlData.push('<div class="buttonGroup">');
+		htmlData.push('<div class="buttonItem">');
+        htmlData.push('<a class="edit" href="javascript:void(0)" title="Edit">');
         htmlData.push('<i class="fa fa-pencil fa-lg" aria-hidden="true"></i></a>');
-        htmlData.push('</td>');
-
-        htmlData.push('<td><a class="dbConf" href="javascript:void(0)" title="Database Config">');
+        htmlData.push('</div>');
+		htmlData.push('<i class="buttonSeperator"></i>');
+		htmlData.push('<div class="buttonItem">');
+        htmlData.push('<a class="dbConf" href="javascript:void(0)" title="Database Config">');
         htmlData.push('<i class="fa fa-database fa-lg" aria-hidden="true"></i></a>');
-        htmlData.push('</td>');
-
-        htmlData.push('<td><a class="logA" href="javascript:void(0)" title="API Log">');
+        htmlData.push('</div>');
+		htmlData.push('<i class="buttonSeperator"></i>');
+		htmlData.push('<div class="buttonItem">');
+        htmlData.push('<a class="logA" href="javascript:void(0)" title="API Log">');
         htmlData.push('<i class="fa fa-file-text-o fa-lg" aria-hidden="true"> API</i></a>');
-        htmlData.push('</td>');
-
-        htmlData.push('<td><a class="logC" href="javascript:void(0)" title="Console Log">');
+        htmlData.push('</div>');
+		htmlData.push('<i class="buttonSeperator"></i>');
+		htmlData.push('<div class="buttonItem">');
+        htmlData.push('<a class="logC" href="javascript:void(0)" title="Console Log">');
         htmlData.push('<i class="fa fa-file-text-o fa-lg" aria-hidden="true"> Console</i></a>');
-        htmlData.push('</td>');
-
-		htmlData.push('</tr></table>');
+        htmlData.push('</div>');
+		htmlData.push('</div>');
 		return htmlData.join('');
 	}
 
@@ -127,6 +127,7 @@ MacPatch Servers
 				$('#modalDialog').addClass("modal-mid");
 				$('#modalBody').css({'height':'420px'});
 				$('#modalDialog').modal('show');
+				$('#modalSaveButton').show();
 
 				$("#modalDialog").on("hidden.bs.modal", function () {
 					$_table.bootstrapTable('refresh');
@@ -145,10 +146,6 @@ MacPatch Servers
 				$('#modalFooter').hide();
 				$('#modalDialog').modal('show');
 				$('#modalSaveButton').hide();
-
-				$("#modalDialog").on("hidden.bs.modal", function () {
-					$_table.bootstrapTable('refresh');
-				});
 			});
 		},
 		'click .logA': function (e, value, row, index)
@@ -170,7 +167,7 @@ MacPatch Servers
 			$.get( "/console/server/log/"+row['server']+"/mpconsole").done(function(data)
 			{
 			    resetModalWindow();
-				$('#modalTitle').html(row['server'] + ' - API Log');
+				$('#modalTitle').html(row['server'] + ' - Console Log');
 				$('#modalBody').html(data);
 				$('#modalBody').css({'height':'90vh'});
 			    $('#modalDialog').addClass("modal-wide");
