--- a/Source/Server/apps/mpconsole/templates/patches/patch_groups.html
+++ b/Source/Server/apps/mpconsole/templates/patches/patch_groups.html
@@ -12,7 +12,7 @@ Patch Groups
 {% endblock %}
 
 {% block bodyPanel %}
-	<table id="table" data-toolbar="#toolbar" data-show-export="true">
+	<table id="table" data-toolbar="#toolbar" data-show-export="true" class="table table-condensed table-striped">
 		<div id="toolbar">
 			<button id="addButton" type="button" class="btn btn-default"><i class="glyphicon glyphicon-plus"></i></button>
 		</div>
@@ -30,7 +30,6 @@ Patch Groups
 	{
 		$('#table').bootstrapTable(
 		{
-			striped: true,
 			pagination: true,
 			sidePagination: 'client',
 			pageList: ['10', '20', '50', '100', 'All'],
@@ -54,7 +53,8 @@ Patch Groups
 				title: '',
 				align: 'center',
 				events: operateEvents,
-				formatter: operateFormatter
+				formatter: operateFormatter,
+				width: 160
 			},
 			{% for col in columns %}
 			{
@@ -108,36 +108,44 @@ Patch Groups
 			hasRights = true;
 		}
 
-		htmlData.push('<table>');
-		htmlData.push('<tr><td>');
+		htmlData.push('<div class="buttonGroup">');
 		if ( hasRights || '{{session.role[0]}}' == 1 ) {
+			htmlData.push('<div class="buttonItem">');
 			htmlData.push('<a class="patches" href="javascript:void(0)" title="Add/Remove Patches">');
 			htmlData.push('<i class="fa fa-list-ul" aria-hidden="true"></i></a>');
-
+			htmlData.push('</div>');
 			if ( row['user_id'] == '{{session.user}}' || '{{session.role[0]}}' == 1 ) {
-			    htmlData.push('</td><td>');
+				htmlData.push('<i class="buttonSeperator"></i>');
+			    htmlData.push('<div class="buttonItem">');
                 htmlData.push('<a class="edit" href="javascript:void(0)" title="Edit Patch Group Info">');
                 htmlData.push('<i class="fa fa-pencil" aria-hidden="true"></i></a>');
-                htmlData.push('</td><td>');
+                htmlData.push('</div>');
             }
+			htmlData.push('<i class="buttonSeperator"></i>');
+			htmlData.push('<div class="buttonItem">');
 			htmlData.push('<a class="admins" href="javascript:void(0)" title="Patch Group Admins">');
             htmlData.push('<i class="fa fa-users" aria-hidden="true"></i></a>');
+			htmlData.push('</div>');
             if ( row['user_id'] == '{{session.user}}' || '{{session.role[0]}}' == 1 ) {
-                htmlData.push('</td><td>');
+				htmlData.push('<i class="buttonSeperator"></i>');
+                htmlData.push('<div class="buttonItem">');
                 htmlData.push('<a class="remove" href="javascript:void(0)" title="Remove Patch Group">');
 			    htmlData.push('<i class="fa fa-trash-o"></i></a>');
+				htmlData.push('</div>');
             }
-            htmlData.push('</td>');
 		} else {
+			htmlData.push('<div class="buttonItem">');
 			htmlData.push('<a class="patches" href="javascript:void(0)" title="View Patches">');
 			htmlData.push('<i class="fa fa-search" aria-hidden="true"></i></a>');
-			htmlData.push('</td><td>');
+			htmlData.push('</div>');
+			htmlData.push('<i class="buttonSeperator"></i>');
+			htmlData.push('<div class="buttonItem">');
 			htmlData.push('<a class="admins" href="javascript:void(0)" title="Patch Group Admins">');
             htmlData.push('<i class="fa fa-users" aria-hidden="true"></i></a>');
-            htmlData.push('</td>');
+            htmlData.push('</div>');
 		}
 
-		htmlData.push('</tr></table>');
+		htmlData.push('</div>');
 		return htmlData.join('');
 	}
 
