--- a/Source/Server/apps/mpconsole/templates/patches/patches_apple_mismatch.html
+++ b/Source/Server/apps/mpconsole/templates/patches/patches_apple_mismatch.html
@@ -23,7 +23,7 @@
 
 {% block bodyPanel %}
 
-	<table id="table" class="table table-condensed" data-toolbar="#toolbar" data-show-export="true">
+	<table id="table" class="table table-condensed table-striped" data-toolbar="#toolbar" data-show-export="true">
 		<div id="toolbar"></div>
 	</table>
 
@@ -49,8 +49,8 @@
 	    $(function () {
           $('[data-toggle="popover"]').popover()
         })
-		$('#table').bootstrapTable({
-			striped: true,
+		$('#table').bootstrapTable(
+		{
 			ajax: function loadMyRows(params)
 			{
 				var _url = "/patches/apple/mismatch/list";
@@ -74,7 +74,11 @@
 			pageList: [5, 10, 20, 50, 100, 200],
 			pagination: true,
 			queryParamsType: "limit",
-			sidePagination: "server",
+			sidePagination: "client",
+			idField: 'patch',
+			sortable: true,
+			sortName: 'count',
+			sortOrder: 'desc',
 			showRefresh: true,
 			exportTypes: ['csv', 'excel', 'json', 'xml', 'txt'],
 			columns: [
