--- a/Source/Server/apps/mpconsole/templates/software/software_group_filters.html
+++ b/Source/Server/apps/mpconsole/templates/software/software_group_filters.html
@@ -33,7 +33,7 @@
 		</div><!-- /.modal-dialog -->
 	</div><!-- /.modal -->
 
-	<table id="table" class="table" data-row-style="rowStyle" data-toolbar="#toolbar">
+	<table id="table" class="table table-striped" data-row-style="rowStyle" data-toolbar="#toolbar">
 		<div id="toolbar">
 			<button id="addButton" type="button" class="btn btn-default"><i class="glyphicon glyphicon-plus"></i></button>
 		</div>
@@ -61,7 +61,6 @@
 	{
 		$('#table').bootstrapTable(
 		{
-			striped: true,
 			ajax: function loadMyRows(params)
 			{
 				if (params.data.search == '') {
@@ -75,6 +74,7 @@
 				}
 
 				var _url = "/software/group/filter/list/{{group_id}}/"+ params.data.limit +"/"+ params.data.offset +"/"+ params.data.search +"/"+ params.data.sort +"/"+ params.data.order;
+				console.log(_url);
 				$.ajax({
 					type: 'GET',
 					url: _url,
@@ -104,7 +104,8 @@
 							title: '',
 							align: 'center',
 							events: operateEvents,
-							formatter: operateFormatter
+							formatter: operateFormatter,
+							width: 100
 						},
 				{% for col in columns %}
 					{
@@ -125,22 +126,29 @@
 	function operateFormatter(value, row, index)
 	{
 		var htmlData = [];
-		htmlData.push('<table><tr><td>')
+		htmlData.push('<div class="buttonGroup">')
 		if ( {{session.role[0]}} == 1 ) {
+			htmlData.push('<div class="buttonItem">');
 			htmlData.push('<a class="edit" href="javascript:void(0)" title="Edit Filter">');
-			htmlData.push('<i class="fa fa-pencil" aria-hidden="true"></i>');
-			htmlData.push('</a>');
+			htmlData.push('<i class="fa fa-pencil" aria-hidden="true"></i></a>');
+			htmlData.push('</div>');
 		} else {
+			htmlData.push('<div class="buttonItem">');
 			htmlData.push('&nbsp;&nbsp;&nbsp;');
+			htmlData.push('</div>');
 		}
-		htmlData.push('</td><td>');
 		if ( {{session.role[0]}} == 1 ) {
+			htmlData.push('<i class="buttonSeperator"></i>');
+			htmlData.push('<div class="buttonItem">');
 			htmlData.push('<a class="remove" href="javascript:void(0)" title="Remove Filter">');
 			htmlData.push('<i class="fa fa-trash-o"></i></a>');
+			htmlData.push('</div>');
 		} else {
+			htmlData.push('<div class="buttonItem">');
 			htmlData.push('&nbsp;&nbsp;&nbsp;');
+			htmlData.push('</div>');
 		}
-		htmlData.push('</td></tr></table>');
+		htmlData.push('</div>');
 		return htmlData.join('');
 	}
 
